# OSLab1

./: .gitignore  CMakeLists.txt  CMakePresets.json  README.md
Creator/: CMakeLists.txt
Main/: CMakeLists.txt  Main.cpp
Reporter/: CMakeLists.txt  reporter.cpp
src/Creator/: Creator.cpp
src/Creator/Tests/: test.py
src/Main/: CMakeLists.txt  Main.cpp  ProgramPaths.h.in
